# Cirkle-K

./: .gitattributes  .gitignore  README.md
resource/: README.md
source/code/: README.md  pyproject.toml
source/code/libraries/: __init__.py
source/code/libraries/R/: case2.R
source/code/libraries/runners/: __init__.py  create_table_and_views_from_sql.py  module_sequence.py
source/code/libraries/scripts/: README.md
source/code/libraries/scripts/api/: README.md  __init__.py  dataformidler_download_files.py
source/code/libraries/scripts/pipelines/: cirkleKsimulations.py  datafordeler_main.py  interview_case1.py
source/code/libraries/utils/: README.md  env.py  orchestrator.py  path_config.py  runtime.py  weights.py
source/code/scripts/: README.md
source/code/scripts/api/: README.md  dataformidler_download_files.py
source/code/scripts/pipelines/: cirkleKsimulations.py  datafordeler_main.py
source/code/scripts/simulations/: __init__.py  cashier.py  loyality_customer_cards.py  transactions.py
source/code/scripts/upserts/: __init__.py  dagi_kommuneinddeling.py  dagi_landsdel.py  dagi_postnummeriddeling.py  dagi_region.py  dagi_storkreds.py  dar_adresse.py  dar_adressepunkt.py  dar_husnummer.py  dar_navngivenvej.py  dar_postnummer.py  simu_campaignsgroups.py  simu_cashier.py  simu_customer_cards.py  simu_products.py  simu_segmentationgroups.py  simu_transactions.py  stations.py
source/code/service/database/: .env.example  README.md  docker-compose.yml
source/code/utils/: env.py  orchestrator.py  path_config.py  simulations_helper_functions.py
(+308 files in other folders)
